# haskell-simple-sessions

./: .travis.yml  Makefile  README.md  test_all.sh
class-1/: Makefile
class-1/src/: Parser.hs
class-1/test/: HSpecTests.hs
concatenating-sorted-stacks/: SortedStack.hs  project.cabal
concatenating-sorted-stacks/src/: Module.hs
concatenating-sorted-stacks/test/: HSpecTests.hs
foreign-function-interface/: .gitignore  Makefile  README.md  SimpleFFI.hs
intro-types/: main.hs  project.cabal
intro-types/src/: IntroToTypes.hs
intro-types/test/: HSpecTests.hs
io-1/: project.cabal
io-1/src/: IOO.hs
io-1/test/: HSpecTests.hs
monad-1/src/: Parser.hs
monad-1/test/: HSpecTests.hs
parser/: Grammar.g4  Makefile  README.md  alias.sh  example-ast.txt  grammar-run.md  links.md  parser.cabal  problem-description.txt
parser/src/: Parser.hs  ParserWithParsec.hs  boolean.hs  csv2.hs
parser/test/: HSpecTests.hs  booleanTests.hs
permutations/: Makefile  Permutations.hs  project.cabal  save_history  save_history.sh
permutations/src/: Permutations.hs
permutations/test/: HSpecTests.hs
permutations2/: HSpecTests.hs  Makefile  Permutations.hs  main.hs  permutations2.cabal
pool-balls/: project.cabal
pool-balls/src/: PoolBalls.hs
pool-balls/test/: HSpecTests.hs  Properties.hs
powersets/: main.hs  project.cabal
powersets/src/: PowerSets.hs
powersets/test/: HSpecTests.hs
series-of-books/: main.hs  project.cabal
series-of-books/src/: BookGeneration.hs
series-of-books/test/: HSpecTests.hs
skeleton/: parser.cabal  project.cabal
skeleton/test/: HSpecTests.hs
syntax/: syntax.cabal
syntax/src/: Syntax.hs
syntax/test/: HSpecTests.hs
tictactoe/: README.md  project.cabal
tictactoe/src/: TicTacToe.hs
tictactoe/test/: HSpecTests.hs
trees/: trees.cabal
trees/src/: Trees.hs
trees/test/: HSpecTests.hs
