Name:                Parser
Version:             0.0.1
Description:         Practicing parsing a binary expression calculator
License:             BSD3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.18
   
Library
  hs-source-dirs:   src
  Build-Depends:     base >= 3 && < 5
                     ,text
                     ,parsec
  Exposed-modules:   Parser
                    ,ParserWithParsec
  ghc-options:       -Wall

Test-Suite hspec
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: HSpecTests.hs
  build-depends: base
                ,hspec
                ,Parser

Test-Suite boolean
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: booleanTests.hs
  build-depends: base
                ,hspec
                ,Parser
