Name:                PoolBalls
Version:             0.0.1
Description:         TODO Modify this description
License:             BSD3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.18
   
Library
  hs-source-dirs: src
  Build-Depends: base >= 3 && < 5,
                 containers
                 ,random
  Exposed-modules: PoolBalls
  ghc-options: -Wall

Test-Suite hspec
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: HSpecTests.hs
  build-depends: base
                ,hspec
                ,PoolBalls

Test-Suite properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  build-depends: base
                ,PoolBalls
                ,QuickCheck
                ,containers
                ,random
