Name:                Syntax
Version:             0.0.1
Description:         TODO Modify this description
License:             BSD3
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >=1.18
   
Library
  hs-source-dirs:   src
  Build-Depends:     base >= 3 && < 5
  Exposed-modules:   Syntax
  ghc-options:       -Wall

Test-Suite hspec
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: HSpecTests.hs
  build-depends: base
                ,hspec
                ,Syntax
